--- a/ar/2-gltf.html
+++ b/ar/2-gltf.html
@@ -8,7 +8,7 @@
   <body style="margin: 0px; overflow: hidden;">
     <a-scene
       embedded
-      arjs="sourceType: webcam; debugUIEnabled: false;"
+      arjs="sourceType: webcam; debugUIEnabled: true;"
       vr-mode-ui="enabled: false"
       renderer="logarithmicDepthBuffer: true; colorManagement: true;"
       loading-screen="dotsColor: white; backgroundColor: black"
